--- a/index.html
+++ b/index.html
@@ -11,15 +11,31 @@
 <body>
     <div class="container">
         <div class="row" id="nav">
-            <div class="col-md-6">
-                <h1>hello</h1>
+            <div class="col-md-6" id="highscores">
+                <a href="highscores.html">Highscores</a>
             </div>
-            <div class="col-md-6">
-                <h1>hello2</h1>
+            <div class="col-md-6" id="timer">
+                <h1>Time: 0</h1>
             </div>
         </div>
-        <div class="row">
-
+        <div class="row" id="box-row">
+            <div class="col-md-12">
+                <div class="row" id="title-box">
+                    <div class="col-md-12" id="box">
+                        <h1>Coding Quiz Challenge</h1>
+                    </div>
+                </div>
+                <div class="row" id="body-box">
+                    <div class="col-md-12" id="box">
+                        <h3>Check out how your skills compare to other developers</h3>
+                    </div>
+                </div>
+                <div class="row" id="body-box">
+                        <div class="col-md-12" id="box">
+                            <button class="start-game">Start</button>
+                        </div>
+                    </div>
+            </div>
         </div>
     </div>
 
