Added button function and timer to js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="highscores.html">Highscores</a>
             </div>
             <div class="col-md-6" id="timer">
-                <h1>Time: 0</h1>
+                <h1></h1>
             </div>
         </div>
         <div class="row" id="box-row">
@@ -30,8 +30,8 @@
                         <h3>Check out how your skills compare to other developers</h3>
                     </div>
                 </div>
-                <div class="row" id="body-box">
-                        <div class="col-md-12" id="box">
+                <div class="row" id="body-button">
+                        <div class="col-md-12" id="box2">
                             <button class="start-game">Start</button>
                         </div>
                     </div>
