Added js for follow up questions, timer render, and score input

--- a/index.html
+++ b/index.html
@@ -31,10 +31,18 @@
                     </div>
                 </div>
                 <div class="row" id="body-button">
-                        <div class="col-md-12" id="box2">
-                            <button class="start-game">Start</button>
-                        </div>
+                    <div class="col-md-12" id="box2">
+                        <button class="start-game">Start</button>
                     </div>
+                </div>
+                <div class="row" id="answer-buttons">
+                    <div class="col-md-12" id="btn-box">
+                    </div>
+                </div>
+                <div class="row" id="score-input">
+                    <div class="col-md-12" id="input-box">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
