--- a/highscores.html
+++ b/highscores.html
@@ -20,7 +20,7 @@
         </div>
         <div class="row" id="box-row">
             <div class="col-md-12" id="box">
-                <h1>Highscores</h1>
+                <h1>All Time Highscores</h1>
             </div>
         </div>
     </div>
