Updated JS to update index.html and highscores.htlm

--- a/index.html
+++ b/index.html
@@ -32,15 +32,20 @@
                 </div>
                 <div class="row" id="body-button">
                     <div class="col-md-12" id="box2">
-                        <button class="start-game">Start</button>
+                        <button id="Start">Start</button>
                     </div>
                 </div>
                 <div class="row" id="answer-buttons">
                     <div class="col-md-12" id="btn-box">
                     </div>
                 </div>
-                <div class="row" id="score-input">
+                <div class="row" id="forms">
                     <div class="col-md-12" id="input-box">
+                        <form class="row" method="POST" id="form-box"></form>
+                    </div>
+                </div>
+                <div class="row" id="submit">
+                    <div class="col-md-12" id="submit-box">
                     </div>
                 </div>
             </div>
