--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row" id="nav">
             <div class="col-md-6" id="highscores">
-                <a href="highscores.html">Highscores</a>
+                <a href="highscores.html" style="text-decoration: none">Highscores</a>
             </div>
             <div class="col-md-6" id="timer">
                 <h1></h1>
@@ -46,6 +46,14 @@
                 </div>
                 <div class="row" id="submit">
                     <div class="col-md-12" id="submit-box">
+                    </div>
+                </div>
+                <audio id="my-Audio">
+                    <source src="./assets/audioFile.mp3" type="audio/mpeg">
+                </audio>
+                <div class="row">
+                    <div class="col-md-12" id="gif-box" >
+                        <!-- style='position:relative; padding-bottom:calc(57.50% + 44px)' -->
                     </div>
                 </div>
             </div>
